--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.0.1",
+    "lodash": "^4.17.21",
     "node": "^21.2.0",
     "path": "^0.12.7",
     "pg": "^8.11.3",
