--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "-": "^0.0.1",
+    "@elastic/elasticsearch": "^8.11.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -9,7 +10,9 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.0.1",
     "lodash": "^4.17.21",
+    "luxon": "^3.4.4",
     "node": "^21.2.0",
+    "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "pg": "^8.11.3",
     "sqlite3": "^5.1.6",
